--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -98,6 +98,7 @@
 		     <a ng-show ="orderData.status == 'DISCONNECTED' && association.orderId != null" ng-click="deAssociation()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Un Pairing</a>
 		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Device Swap</a>
 		     <a ng-show ="orderData.status == 'ACTIVE'" ng-click="applyPromo()" class="btn btn-primary"><i class="icon-gift"></i>Apply Promo</a>
+		     <a ng-show ="orderData.status == 'ACTIVE'" ng-click="extension()" class="btn btn-primary"><i class="icon-cog"></i>Extension</a>
 		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
 		    
 	      
@@ -544,6 +545,41 @@
          <button id="cancel" class="btn btn-warning" ng-click="rejectProvisioning()">{{'button.cancel' | translate}}</button>
          <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flagPromo">{{'label.confirm' | translate}}</button>
    </div>
-</script>      
+</script>     
+
+<script type="text/ng-template" id="extension.html">
+		
+	<div class="modal-header silver">
+        <h3 class="bolder">{{ 'label.extension' | translate }}</h3>
+    </div>
+    <div class="modal-body"  style="height:250px;">
+       <fieldset>
+		<div class="control-group">
+            <label class="control-label" style="color:red;" ng-show="renewError.length>0">{{renewError | translate}}</label>
+            <div class="controls">
+            </div>
+        </div>
+             
+		<div class="control-group">
+            <label class="control-label" for="extensionPeriod">{{ 'label.extensionperiod' | translate }}</label>
+            <div class="controls">
+            <select ng-model="formData.extensionPeriod"  ng-options="periodData.mCodeValue as periodData.mCodeValue for periodData in extensionPeriodDatas" value="{{periodData.id}}">
+            </select>
+            </div>
+        </div>
+		<div class="control-group">
+            <label class="control-label" for="extensionReason">{{ 'label.extensionreason' | translate }}</label>
+            <div class="controls">
+            <select ng-model="formData.extensionReason"  ng-options="reasonData.mCodeValue as reasonData.mCodeValue for reasonData in extensionReasonDatas" value="{{periodData.id}}">
+            </select>
+            </div>
+        </div>
+		</fieldset>
+    </div>
+   <div class="modal-footer">
+         <button id="cancel" class="btn btn-warning" ng-click="rejectExtension()">{{'button.cancel' | translate}}</button>
+         <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flagExtension">{{'label.confirm' | translate}}</button>
+   </div>
+</script> 
       
 </div>
