--- a/app/views/clients/addclientdocument.html
+++ b/app/views/clients/addclientdocument.html
@@ -52,7 +52,7 @@
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
         	<tr>
-        		<td><small>Mail him {{email}}</small></td>
+        			<td><small>Device # {{hwSerialNumber}}</small></td>
         	</tr>
         </table>
         </td>
