--- a/app/views/clients/viewstatement.html
+++ b/app/views/clients/viewstatement.html
@@ -53,7 +53,7 @@
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
         	<tr>
-        		<td><small>Mail him {{email}}</small></td>
+        	<td><small>Device # {{hwSerialNumber}}</small></td>
         	</tr>
         </table>
         </td>
