--- a/app/views/prospects/editprospects.html
+++ b/app/views/prospects/editprospects.html
@@ -270,7 +270,7 @@
 			</table>
   			
           <div class="offset3">
-            <a href="#/viewprospects/editprospects.id"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <a href="#/viewprospects/{{editprospects.id}}"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
             <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
