--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -232,6 +232,37 @@
                        
                     </table>
                 </div>
+                
+                 <div class="row-fluid">
+                  <p>
+                     <b><h4>Schedule Orders</h4></b>
+                   </p>
+                   
+                    <table class="table">
+                        <tr class="graybg">
+                              <th>Order NO</th>
+                            <th>Plan</th>
+                            <th>Contract Period</th>
+                            <th>Activation Date</th>
+                            <th>Start/Renwal Date</th>
+                            <th>End Date</th>
+                            <th>Price</th>
+                            <th>Status</th>
+                        </tr>
+                          <tr class="pointer-main" ng-repeat="order in orders | filter:filterText" >
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.orderNo}}</td>
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.planCode}}</td>
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.contractPeriod}}</td>
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.activeDate | DateFormat}}</td>
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.startDate | DateFormat}}</td>
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.endDate | DateFormat}}</td> 
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.price}}</td>
+                           <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)"><i class="icon-stop {{order.status | StatusLookup}}"></i>&nbsp;{{order.status}}</td>
+                        </tr>
+                        <tr><td colspan="8">&nbsp;</td></tr>
+                       
+                    </table>
+                </div>
           </div>
       </tab>
       <tab heading="{{'tab.identities' | translate}}" select="getClientIdentityDocuments()" active="identitiesTab">
