--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -228,8 +228,8 @@
             
                <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
           <!--  <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button> -->
-               <button id="submit" ng-click="submit()" class="btn btn-primary">Save</button>
-               <button  ng-click="submitschedule()"  class="btn btn-primary">Save Later</button>
+               <button id="submit" ng-click="submit()" class="btn btn-primary" ng-show="todayDate==selectedDate">Save</button>
+               <button  ng-click="submitschedule()"  class="btn btn-primary" ng-hide="todayDate==selectedDate">Save Later</button>
           </div>
         </fieldset>
          
