--- a/app/views/paymentgateway/editPaymentGateway.html
+++ b/app/views/paymentgateway/editPaymentGateway.html
@@ -34,7 +34,10 @@
 					<div class="control-group">
 						<label class="control-label" for="remarks"> {{ 'label.paymentgateway.remarks' | translate }} </label>
 						<div class="controls">
-							<textarea ng-model="formData.remarks" style="width: 250px; height: 70px;"></textarea>
+							<select ng-model="formData.remarks">
+								<option>Active</option>
+								<option>Done</option>
+							</select>
 						</div>
 					</div>
 				</td>
