--- a/app/views/help.html
+++ b/app/views/help.html
@@ -1,6 +1,6 @@
 <div class="span gray-head" style="margin-left:0%;margin-top:5px;">
       <span style="margin-left: 10px;font-size:20px">
-            <strong>{{ 'label.anchor.help' | translate }}<i class="icon-question-sign"></i></strong>
+            <strong>{{ 'label.anchor.shortcuts' | translate }}<i class="icon-hand-right"></i></strong>
       </span>
 </div>
 
