--- a/app/views/paymentgateway/paymentGateway.html
+++ b/app/views/paymentgateway/paymentGateway.html
@@ -41,7 +41,7 @@
                 <td>{{paymentgatewaydata.phoneNo}}</td>
                 <td>{{paymentgatewaydata.remarks}}</td>
                 <td>{{paymentgatewaydata.status}}</td>                                     
-                <td><a href="#/editPaymentGateway/{{paymentgatewaydata.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i></a></td>       
+                <td><a href="#/editPaymentGateway/{{paymentgatewaydata.id}}" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td>       
    			</tr>
      		 </tbody>
           </table>
