changes to help and clientview top bar for device and search for reports

--- a/app/views/clients/newTicket.html
+++ b/app/views/clients/newTicket.html
@@ -53,7 +53,7 @@
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
         	<tr>
-        		<td><small>Device # {{hwSerialNumber}}</small></td>
+        		<td><small>Device # <strong>{{hwSerialNumber}}</strong></small></td>
         	</tr>
         </table>
         </td>
