--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -63,7 +63,7 @@
         		<td><small>Cell Phone {{client.phone}}</small></td>
         	</tr>
         	<tr>
-        		<td><small>Device # {{client.hwSerialNumber}}</small></td>
+        		<td><small>Device # <strong>{{client.hwSerialNumber}}</strong></small></td>
         	</tr>
         </table>
         </td>
