--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -54,7 +54,7 @@
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
         	<tr>
-        	   <td><small>Device # {{hwSerialNumber}}</small></td>
+        	   <td><small>Device # <strong>{{hwSerialNumber}}</strong></small></td>
         	</tr>
         </table>
         </td>
