--- a/app/views/clients/editTicket.html
+++ b/app/views/clients/editTicket.html
@@ -31,7 +31,7 @@
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
         	<tr>
-        	<td><small>Device # {{hwSerialNumber}}</small></td>
+        	<td><small>Device # <strong>{{hwSerialNumber}}</strong></small></td>
         	</tr>
         </table>
         </td>
