--- a/app/views/clients/editownhardware.html
+++ b/app/views/clients/editownhardware.html
@@ -29,7 +29,7 @@
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
         	<tr>
-        		<td><small>Device # {{hwSerialNumber}}</small></td>
+        		<td><small>Device # <strong>{{hwSerialNumber}}</strong></small></td>
         	</tr>
         </table>
         </td>
