--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -52,7 +52,7 @@
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
         	<tr>
-        		<td><small>Device # {{hwSerialNumber}}</small></td>
+        		<td><small>Device # <strong>{{hwSerialNumber}}</strong></small></td>
         	</tr>
         </table>
         </td>
