--- a/app/views/system/reports.html
+++ b/app/views/system/reports.html
@@ -9,7 +9,10 @@
 </div>
 
 <div class="row-fluid" ng-controller="ReportsController">
-    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+   <!--  <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name"> -->
+    <form ng-submit="search(filterText)">
+    	<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name"/>
+	</form>
 	<table class="table">
         <thead>
             <tr class="graybg">
@@ -22,14 +25,18 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="pointer-main" ng-repeat="report in reports | filter:filterText">
-                <td class="pointer" data-ng-click="routeToreport(report.id)">{{report.reportName}}</td>
-                <td class="pointer" data-ng-click="routeToreport(report.id)">{{report.reportType}}</td>
-                <td class="pointer" data-ng-click="routeToreport(report.id)">{{report.reportSubType}}</td>
-                <td class="pointer" data-ng-click="routeToreport(report.id)">{{report.reportCategory}}</td>
-                <td class="pointer" data-ng-click="routeToreport(report.id)">{{report.coreReport}}</td>
-                <td class="pointer" data-ng-click="routeToreport(report.id)">{{report.useReport}}</td>
+            <tr class="pointer-main" ng-repeat="report in reports.currentPageItems | filter:filterText">
+                <td class="pointer" data-ng-click="routeToreport(report.reportId)">{{report.reportName}}</td>
+                <td class="pointer" data-ng-click="routeToreport(report.reportId)">{{report.reportType}}</td>
+                <td class="pointer" data-ng-click="routeToreport(report.reportId)">{{report.reportSubType}}</td>
+                <td class="pointer" data-ng-click="routeToreport(report.reportId)">{{report.reportCategory}}</td>
+                <td class="pointer" data-ng-click="routeToreport(report.reportId)">{{report.coreReport}}</td>
+                <td class="pointer" data-ng-click="routeToreport(report.reportId)">{{report.useReport}}</td>
             </tr>
         </tbody>
     </table>
+    <ul class="pager">
+        <li class="previous"><a  id="prev" ng-click="reports.previous()" href="" ng-disabled="!reports.hasPrevious()">&larr; Prev</a></li>
+        <li class="next" ><a  id="next"   ng-click="reports.next()" href="" ng-disabled="!reports.hasNext()">Next &rarr;</a></li>
+    </ul>
 </div>
