--- a/app/views/system/edithardwareplanmapping.html
+++ b/app/views/system/edithardwareplanmapping.html
@@ -33,9 +33,9 @@
           						</div>
 							
   			
-          <div class="offset3">
-            <a href="#/admin/hardwareplan"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+             <div class="offset3">
+             <a href="#/viewhardwareplanmapping/{{hardwareId}}"><button id="cancel" type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
+             <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
