--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -11,6 +11,8 @@
             <th>{{'label.form.name' | translate}}</th>
             <th>{{'label.enabled' | translate}}</th>
             <th></th>
+            <th>Value</th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -20,7 +22,39 @@
             <td><button type="button" class="btn btn-success flag" data-ng-hide="config.enabled" data-ng-click="enable(config.name)"><i class="icon-flag-alt"></i></button>
                 <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.name)"><i class="icon-remove"></i></button>
             </td>
+            <td></td>
+            <td><a ng-click="edit()" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td> 
         </tr>
         </tbody>
     </table>
+    
+    <script type="text/ng-template" id="editglobal.html">
+
+	<form class="form-horizontal well" ng-submit="submit()">
+	 <div class="error" ng-show="errorStatus || errorDetails">
+		<label>{{'label.contract.error' | translate}}</label>
+		<label ng-show="errorStatus">{{errorStatus}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	    </div>
+	<fieldset>
+		<legend>Edit</legend>
+		
+	</fieldset>
+	
+		<div class="control-group">
+           <label class="control-label" for="value">Value</label>
+            <div class="controls">
+             <input type="text" id="value" ng-model="formData.value">
+            </div>
+        </div>
+	
+	</form>
+   <div class="modal-footer">
+         <button id="cancel" class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
+         <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flag">{{'label.confirm' | translate}}</button>
+   </div>
+
+</script> 
+    
+    
 </div>
