--- a/app/views/organization/createemployee.html
+++ b/app/views/organization/createemployee.html
@@ -36,14 +36,14 @@
             </div>
           </div>
           
-          <div class="control-group">
+          <!-- <div class="control-group">
             <label class="control-label" for="isLoanOfficer">{{ 'label.employee.isLoanOfficer' | translate }}</label>
             <div class="controls">
               <label class="checkbox">
                 <input type="checkbox" id="isLoanOfficer" ng-model="formData.isLoanOfficer">
               </label>
             </div>
-          </div>
+          </div> -->
 
           <div class="offset3">
             <a href="#/employees"><button  id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
