--- a/app/views/clients/addonetimesalewizard.html
+++ b/app/views/clients/addonetimesalewizard.html
@@ -74,6 +74,14 @@
             					</div>
           						</div>
           					</td>
+          					<td>
+									<div class="control-group"  ng-repeat="item in getNumber(formData2.quantity)" name="serialNumberDiv">
+                                     <label class="control-label" for="serialNumber">{{ 'label.serialNumber' | translate }}&nbsp;<span class="required">*</span></label>
+                                      <div class="controls">
+             	                        <input type="text" ng-model="itemDetail" name="serialNumber" ng-change="getData(itemDetail)" typeahead="itemDetail as itemDetail for itemDetail in itemDetails | limitTo:8" typeahead-min-length="0">
+                                      </div>
+                                    </div>	
+								</td>
 								
 							</tr>
 					</table>
