--- a/app/views/clients/createclientnewwizard.html
+++ b/app/views/clients/createclientnewwizard.html
@@ -4,17 +4,17 @@
          
          <div class="ui-progressbar  ui-widget-content ui-corner-all-progress jw-progress">
              <div id="progress4" class="ui-progressbar-value ui-widget-header" style="display: block; width: 100%;background: none repeat scroll 0% 0% #E5E4E2;"></div>
-             <span id="progressno4" class="ui-progressbar-label" style="position: relative; top: -26px; left: 9.50006px;margin-left:12px"><span id="active4">4.Order</span></span>
+             <span id="progressno4" class="ui-progressbar-label" style="position: relative; top: -26px; left: 9.50006px;margin-left:12px"><span id="active4">3.Order</span></span>
              <!-- <div id="progress" class="ui-progressbar-value ui-widget-header" style="display: block; width: 0%;"></div>
                 <span id="progressno" class="ui-progressbar-label" style="position: relative; top: 6.5px; left: 9.50006px;">{{no}} of 4 Complete</span>-->
           </div> 
-          <div class="ui-progressbar  ui-widget-content ui-corner-all-progress jw-progress">
+        <!--   <div class="ui-progressbar  ui-widget-content ui-corner-all-progress jw-progress">
               <div id="progress3" class="ui-progressbar-value ui-widget-header" style="display: block; width: 100%;background: none repeat scroll 0% 0% #E5E4E2;"></div>
                <span id="progressno3" class="ui-progressbar-label" style="position: relative; top: -26px; left: 9.50006px;margin-left:12px"><span id="active3">3.Assign Device</span></span>
-          </div>
+          </div> -->
           <div class="ui-progressbar  ui-widget-content ui-corner-all-progress jw-progress">
              <div id="progress2" class="ui-progressbar-value ui-widget-header" style="display: block; width: 100%;background: none repeat scroll 0% 0% #E5E4E2;"></div>
-             <span id="progressno2" class="ui-progressbar-label" style="position: relative; top: -26px; left: 9.50006px;margin-left:12px"><span id="active2">2.Item Sale</span></span>
+             <span id="progressno2" class="ui-progressbar-label" style="position: relative; top: -26px; left: 9.50006px;margin-left:12px"><span id="active2">2.Device Info</span></span>
           </div>
           <div class="ui-progressbar  ui-widget-content ui-corner-all-progressfirst jw-progress">
              <div id="progress1" class="ui-progressbar-value ui-widget-header" style="display: block; width: 100%;background: none repeat scroll 0% 0% #FFA500;"></div>
@@ -29,10 +29,10 @@
 			<div class="jw-step" ng-show="step2" style="display: block;">
 				<div ng-include src="template2" ></div>
 			</div>
-			
+		<!-- 	
 			 <div class="jw-step" ng-show="step3" style="display: block;">
 				<div ng-include src="template3" ></div>
-			</div> 
+			</div>  -->
 			
 			<div class="jw-step" ng-show="step4" style="display: block;">
 				<div ng-include src="template4" ></div>
