--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -23,7 +23,7 @@
                 <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.name)"><i class="icon-remove"></i></button>
             </td>
             <td></td>
-            <td><a ng-click="edit()" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td> 
+            <td><a ng-click="edit(config.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td> 
         </tr>
         </tbody>
     </table>
