--- a/app/views/system/createServiceMapping.html
+++ b/app/views/system/createServiceMapping.html
@@ -18,7 +18,7 @@
            <div class="control-group">
             <label class="control-label" for="serviceCode">{{'label.serviceCode' | translate }}</label>
             <div class="controls">
-              <select ng-model="formData.serviceId"  ng-options="sc.id as sc.serviceCode for sc in serviceCodes" value="{{serviceCode.id}}">
+              <select ng-model="formData.serviceId"  ng-options="sc.id as sc.serviceCode for sc in serviceCodes"  value="{{serviceCode.id}}">
               <option value="">{{'label.select.one' | translate}}</option>
               </select>
             </div>
@@ -27,8 +27,11 @@
           <div class="control-group">
             <label class="control-label" for="serviceIdentification">{{'label.serviceIdentification' | translate }}</label>
             <div class="controls">
-              <input type="text" id="serviceIdentification"  ng-model="formData.serviceIdentification">
+              <input type="text" id="serviceIdentification"   ng-model="formData.serviceIdentification">
               
+                <select ng-model="formData.serviceIdentification"  ng-options="sp.parameterName as sp.parameterName for sp in serviceParameters"  value="{{serviceParameter.id}}">
+              <option value="">{{'label.select.one' | translate}}</option>
+              </select>
             </div>
           </div>
 
