--- a/app/views/organization/addressTreeview.html
+++ b/app/views/organization/addressTreeview.html
@@ -156,7 +156,7 @@
 			<div class="control-group">
 				<label class="control-label" for="country">For This Country :</label>
 				<div class="controls">
-             		 <input  type="text" ng-model="nodeLabel" value={{nodeName}} readonly/>
+             		 <input  type="text" ng-model="nodeName" readonly/>
              		
             	</div>
 	   		</div>
@@ -250,7 +250,7 @@
 			<div class="control-group">
 				<label class="control-label" for="state">For This State :</label>
 				<div class="controls">
-             		 <input  type="text" ng-model="nodeLabel" value={{nodeName}} readonly/>
+             		 <input  type="text" ng-model="nodeName" readonly/>
             	</div>
 	   		</div>
 		  </fieldset>
