--- a/app/views/clients/createactivation.html
+++ b/app/views/clients/createactivation.html
@@ -36,7 +36,7 @@
            	<tr>
            	<td>
   		      	<div class="control-group">
-              		<label class="control-label" for="firstname">{{'label.middlename' | translate}}<span class="required">*</span></label>
+              		<label class="control-label" for="firstname">{{'label.name' | translate}}<span class="required">*</span></label>
               		<div class="controls">
                 		<input type="text" id="firstname" name="firstname" ng-model="formData1.middlename" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                 		<span  ng-show="createclientform.firstname.$invalid">
