--- a/app/views/administration/organization.html
+++ b/app/views/administration/organization.html
@@ -40,6 +40,10 @@
 	    <a class="list-group-item" href="#/addressmanage">
 	      <h4 class="list-group-item-heading"><i class="icon-list icon-large"></i>&nbsp;&nbsp;Manage Addresses</h4>
 	      <p class="list-group-item-text">For Country,State,and City</p>
+	    </a> 
+	     <a class="list-group-item" href="#/ipPooling">
+	      <h4 class="list-group-item-heading"><i class="icon-list icon-large"></i>&nbsp;&nbsp;IpPooling</h4>
+	      <p class="list-group-item-text"></p>
 	    </a>
 	    
 	  </div>    
