--- a/app/views/administration/system.html
+++ b/app/views/administration/system.html
@@ -1,6 +1,10 @@
 <div class="row paddedleft paddedtop">
 	<div class="span6">
 		<div class="list-group">
+			<a class="list-group-item" href="#/users">
+				<h4 class="list-group-item-heading"><i class="icon-user icon-large"></i>&nbsp;&nbsp;{{ 'link.admin.users' | translate }}</h4>
+				<p class="list-group-item-text">Define or modify users and associated roles</p>
+			
 			<a class="list-group-item" href="#/datatables">
 				<h4 class="list-group-item-heading"><i class="icon-table icon-large"></i>&nbsp;&nbsp;Manage Data Table</h4>
 				<p class="list-group-item-text">Add new extra feilds to any entity in the form of data table.</p>
