--- a/app/views/administration/userslist.html
+++ b/app/views/administration/userslist.html
@@ -1,7 +1,9 @@
 <div>
-    <ul class="breadcrumb">
-        <li class="active">{{'link.admin.users' | translate}}</li>
-    </ul>
+   
+ <ul class="breadcrumb">
+        <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
+          <li class="active">{{'link.admin.users' | translate}}</li>
+</ul> 
     <div class="pull-right">
         <a href="#/createuser" class="btn btn-primary"><i class="icon-plus icon-white"></i> Create User</a>
     </div>
