--- a/app/views/clients/createactivation.html
+++ b/app/views/clients/createactivation.html
@@ -20,7 +20,7 @@
             	<div class="control-group">
              		 <label class="control-label">{{'label.office' | translate}}<span class="required">*</span></label>
               		<div class="controls">
-                		<select ng-model="formData.officeId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}" ng-change="changeOffice(formData.officeId)"></select>
+                		<select ng-model="formData1.officeId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}" ng-change="changeOffice(formData.officeId)"></select>
               		</div>
            		 </div>
             </td>
@@ -28,7 +28,7 @@
             	<div class="control-group">
              	 	<label class="control-label">{{'label.clientcategeory' | translate}}<span class="required">*</span></label>
               		<div class="controls">
-               		 <select ng-model="formData.clientCategory"  ng-options="clientCategoryData.id as clientCategoryData.categoryType for clientCategoryData in clientCategoryDatas" value="{{clientCategoryDatas.id}}"></select>
+               		 <select ng-model="formData1.clientCategory"  ng-options="clientCategoryData.id as clientCategoryData.categoryType for clientCategoryData in clientCategoryDatas" value="{{clientCategoryDatas.id}}"></select>
               		</div>
            		 </div>
            	</td>
@@ -91,7 +91,7 @@
            </tr>
             <tr>
             <td>
-         <strong>Device Info</strong>
+         <strong>Device Info({{config}})</strong>
          </td><td></td>
          </tr>
            	<tr>
@@ -131,7 +131,7 @@
            		</div>
            	</td>
            	<td>
-           		<div class="control-group" ng-hide="formData4.isPrepaid == 'Y'">
+           		<div class="control-group" >
                    <label class="control-label" for="paytermCode">{{ 'label.activation.plan' | translate }}</label>
                      <div class="controls">
                         <select ng-model="formData4.planId"  ng-options="plandata.id as plandata.planCode for plandata in plandatas" ng-change='setBillingFrequency(formData4.planId)' value="{{plandata.id}}"></select>
@@ -144,7 +144,7 @@
            		<div class="control-group">
                		<label class="control-label" for="contractPeriod">{{ 'label.order.contractperiod' | translate }}</label>
                 	 <div class="controls">
-                    	<select   ng-disabled="formData.isPrepaid == 'Y'" ng-model="formData4.contractPeriod"  ng-options="subscriptiondata.id as subscriptiondata.Contractdata for subscriptiondata in subscriptiondatas" value="{{billRuleData.id}}"></select>
+                    	<select   ng-disabled="formData4.isPrepaid == 'Y'" ng-model="formData4.contractPeriod"  ng-options="subscriptiondata.id as subscriptiondata.Contractdata for subscriptiondata in subscriptiondatas" value="{{billRuleData.id}}"></select>
                  	</div>
              	</div>
              </td>
@@ -162,15 +162,18 @@
              	  <div class="control-group" ng-hide="configurationProperty==false">
              		 <label class="control-label">Login<span class="required">*</span></label>
               		<div class="controls">
-               			 <input type="text" id="login" name="login" ng-model="formData.login"/>
+               			 <input type="text" id="login" name="login" ng-model="formData1.login"/>
               		</div>
             	</div>
             </td>
-            <td>
-            	<datalist id="citylist">
-                   <option  data-ng-repeat="city in cities" value="{{city}}">
-             	</datalist>
-             </td>
+           <td>
+            	<div class="control-group" ng-hide="configurationProperty==false">
+              		<label class="control-label">Password<span class="required">*</span></label>
+             		 <div class="controls">
+               			 <input type="password"  ng-model="formData1.password"/>
+              		</div>
+            	</div>
+           	</td>
              </tr>
              <tr>
              <td>
@@ -181,14 +184,12 @@
               		</div>
             	</div>
            	</td>
-           	 <td>
-            	<div class="control-group" ng-hide="configurationProperty==false">
-              		<label class="control-label">Password<span class="required">*</span></label>
-             		 <div class="controls">
-               			 <input type="password"  ng-model="formData.password"/>
-              		</div>
-            	</div>
-           	</td>
+           	
+           	  <td>
+            	<datalist id="citylist">
+                   <option  data-ng-repeat="city in cities" value="{{city}}">
+             	</datalist>
+             </td>
            </tr>
            </table> 
             <div class="pull-right">
