--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -1032,7 +1032,7 @@
     			</ul>
 	</div>
 </tab>
-<tab heading="Distribution" select="getClientDistribution()">
+<tab heading="CRD" select="getClientDistribution()">
      <div class="pull-right">
 		         <a href="#/creditDistribution/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Distribute</a>
 	        </div>
