--- a/app/views/system/users.html
+++ b/app/views/system/users.html
@@ -1,4 +1,9 @@
-
+ <div>
+ <ul class="breadcrumb">
+        <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
+        <li class="active">System Users</li>
+</ul> 
+</div>
 <div id="systemUsers" data-ng-controller="UserController">
   <div class="users-actions">
     <div class="action create" data-ng-click="newUserFormDialog()">New user</div>
