--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -19,8 +19,10 @@
         <tr ng-repeat="config in configs  | filter:filterText">
             <td>{{config.name}}</a></td>
             <td>{{config.enabled}}</td>
-            <td><button type="button" class="btn btn-success flag" data-ng-hide="config.enabled" data-ng-click="enable(config.name)"><i class="icon-flag-alt"></i></button>
-                <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.name)"><i class="icon-remove"></i></button>
+            <td></td>
+            <td>{{config.value}}</td>
+            <td><button type="button" class="btn btn-success flag" data-ng-hide="config.enabled" data-ng-click="enable(config.id,config.name)"><i class="icon-flag-alt"></i></button>
+                <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.id,config.name)"><i class="icon-remove"></i></button>
             </td>
             <td></td>
             <td><a ng-click="edit(config.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td> 
